--- a/covidnews.html
+++ b/covidnews.html
@@ -2832,6 +2832,16 @@
    </div>
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>Hydrating the respiratory tract: An alternative explanation why masks lower severity of COVID-19</h3>
+     <p class="price">Source: Cell, Published on February 11, 2021</p>
+     <a href="https://doi.org/10.1016/j.bpj.2021.02.002" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>Fauci: Vaccines for Kids as Young as First Graders Could Be Authorized by September</h3>
      <p class="price">Source: Propublica, Published on February 11, 2021</p>
      <a href="https://www.propublica.org/article/fauci-vaccines-kids" class="btn">Link to Article</a>
@@ -4120,6 +4130,16 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>SARS-CoV-2 501Y.V2 variants lack higher infectivity but do have immune escape</h3>
+     <p class="price">Source: Cell, Published on February 23, 2021</p>
+     <a href="https://doi.org/10.1016/j.cell.2021.02.042" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>       
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>95% of former COVID patients suffer no irreversible damage, Israeli study finds</h3>
@@ -6671,11 +6691,12 @@
      <h3>Prevention of COVID-19 among older adults receiving pneumococcal conjugate vaccine suggests interactions between Streptococcus pneumoniae and SARS-CoV-2 in the respiratory tract</h3>
      <p class="price">Source: Oxford Academics, Published on March 9, 2021</p>
      <a href="https://doi.org/10.1093/infdis/jiab128" class="btn">Link to Study Article</a>
+     <a href="https://about.kaiserpermanente.org/our-story/health-research/news/pneumonia-vaccine-may-affect-course-of-covid-19" class="btn">Link to Article</a> 
     </div>
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>    
+   </div>          
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Biden to announce plan to purchase additional 100 million Johnson and Johnson Covid vaccine doses</h3>
