--- a/index.html
+++ b/index.html
@@ -2605,6 +2605,17 @@
    </div>     
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>Five reasons why COVID herd immunity is probably impossible</h3>
+     <p class="price">Source: Nature, Published on March 18, 2021</p>
+     <a href="https://www.nature.com/articles/d41586-021-00728-2" class="btn">Link to Article</a> 
+     <a href="https://doi.org/10.1023/a:1007626510002" class="btn">Link to Addiotional Article</a>  
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>       
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>First baby in U.S. born with antibodies against COVID-19 after mom receives dose of Moderna vaccine while pregnant</h3>
      <p class="price">Source: CBS, Published on March 19, 2021</p>
      <a href="https://www.cbsnews.com/news/baby-born-covid-antibodies-moderna-vaccine/" class="btn">Link to Article</a> 
@@ -3075,7 +3086,27 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>      
+   </div>   
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Persistent neurologic symptoms and cognitive dysfunction in non‐hospitalized Covid‐19 “long haulers”</h3>
+     <p class="price">Source: Online Wiley Library Annals of Clinical and Translational Neurology, Published on March 23, 2021</p>
+     <a href="https://doi.org/10.1002/acn3.51350" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>       
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Antibody Responses after a Single Dose of SARS-CoV-2 mRNA Vaccine</h3>
+     <p class="price">Source: New England Journal of Medicine (NEJM), Published on March 23, 2021</p>
+     <a href="https://www.nejm.org/doi/full/10.1056/NEJMc2102051" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Brain and Lung Imaging Correlation in Patients with COVID-19: Could the Severity of Lung Disease Reflect the Prevalence of Acute Abnormalities on Neuroimaging? A Global Multicenter Observational Study</h3>
@@ -3185,7 +3216,27 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>        
+   </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>COVID-19 vaccine response in pregnant and lactating women: a cohort study</h3>
+     <p class="price">Source: American Journal of Obstetrics and Gynecology, Published on March 25, 2021</p>
+     <a href="https://doi.org/10.1016/j.ajog.2021.03.023" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>SARS-CoV-2 infection of the oral cavity and saliva</h3>
+     <p class="price">Source: Nature, Published on March 25, 2021</p>
+     <a href="https://doi.org/10.1038/s41591-021-01296-8" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
 <div>
   <a href="javascript:void(0)" class="news-btn covidnews"><i class="fas fa-plus fa-fw" aria-hidden="true"></i>Past Coronavirus News</a>  
 </div>
