--- a/covidnews.html
+++ b/covidnews.html
@@ -7877,16 +7877,6 @@
    </div>  
 <div class="article-container">
     <div class="news-box news-box-a">
-     <h3>Can the US avoid a European-style new wave of coronavirus infections?</h3>
-     <p class="price">Source: Guardian, Published on March 18, 2021</p>
-     <a href="https://www.theguardian.com/us-news/2021/mar/18/us-coronavirus-europe-lockdown-vaccines" class="btn">Link to Article</a> 
-    </div>
-    <div class="news-box news-box-b">
-     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
-    </div>
-   </div>
-<div class="article-container">
-    <div class="news-box news-box-a">
      <h3>Orlando Sentinel sues Florida Department of Health to force release of COVID variant data</h3>
      <p class="price">Source: Orlando Sentinel, Published on March 18, 2021</p>
      <a href="https://www.orlandosentinel.com/news/os-ne-orlando-sentinel-sues-florida-for-covid-variant-data-20210318-nf2fylemwza4th57qm27ex66ky-story.html" class="btn">Link to Article</a> 
@@ -7962,6 +7952,17 @@
      <h3>Vaccination and non-pharmaceutical interventions for COVID-19: a mathematical modelling study</h3>
      <p class="price">Source: Lancet, Published on March 18, 2021</p>
      <a href="https://doi.org/10.1016/S1473-3099(21)00143-2" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Five reasons why COVID herd immunity is probably impossible</h3>
+     <p class="price">Source: Nature, Published on March 18, 2021</p>
+     <a href="https://www.nature.com/articles/d41586-021-00728-2" class="btn">Link to Article</a> 
+     <a href="https://doi.org/10.1023/a:1007626510002" class="btn">Link to Addiotional Article</a>  
     </div>
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
