--- a/covidnews.html
+++ b/covidnews.html
@@ -312,24 +312,14 @@
    </div>
 <div class="article-container">
     <div class="news-box news-box-a">
-     <h3>U.S. crosses 10 million COVID-19 cases as third wave of infections surges</h3>
-     <p class="price">Source: Reuters published at 4:39 PM, Sun November 8, 2020</p>
-     <a href="https://www.reuters.com/article/health-coronavirus-usa-records-idUSKBN27P01Q" class="btn">Link to Article</a>
+     <h3>SARS-CoV-2 and mitochondrial health: implications of lifestyle and ageing</h3>
+     <p class="price">Source: Bio Medical Central Immunity and Aging, Published on November 9, 2020</p>
+     <a href="https://doi.org/10.1186/s12979-020-00204-x" class="btn">Link to Study Article</a>
     </div>
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>      
-<div class="article-container">
-    <div class="news-box news-box-a">
-     <h3>10 million people have been infected with coronavirus in the US -- and the rates keep rising in 43 states</h3>
-     <p class="price">Source: CNN at MSN, Updated at 10:14 PM ET, Mon November 9, 2020</p>
-     <a href="https://www.msn.com/en-us/health/medical/us-coronavirus-10-million-people-have-been-infected-with-coronavirus-in-the-us-and-the-rates-keep-rising-in-43-states/ar-BB1aPuDK?ocid=uxbndlbing" class="btn">Link to Article</a>
-    </div>
-    <div class="news-box news-box-b">
-     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
-    </div>
-   </div>    
+   </div>   
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>El Paso, Texas, calls in ten morgue trucks as coronavirus cases surge</h3>
@@ -8158,7 +8148,17 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>     
+   </div>
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Carcinogen Found in Hand Sanitizers That Plugged Covid Gap</h3>
+     <p class="price">Source: Bloomberg, Published on March 24, 2020</p>
+     <a href="https://www.bloomberg.com/news/articles/2021-03-24/carcinogen-found-in-hand-sanitizers-that-plugged-pandemic-gap" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
     
     
 
