--- a/index.html
+++ b/index.html
@@ -3520,6 +3520,16 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Initial report of decreased SARS-CoV-2 viral load after inoculation with the BNT162b2 vaccine</h3>
+     <p class="price">Source: Nature, Published on March 29, 2020</p>
+     <a href="https://doi.org/10.1038/s41591-021-01316-7" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>       
 <div>
   <a href="javascript:void(0)" class="news-btn covidnews"><i class="fas fa-plus fa-fw" aria-hidden="true"></i>Past Coronavirus News</a>  
 </div>
