--- a/covidnews.html
+++ b/covidnews.html
@@ -1002,7 +1002,17 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>      
+   </div>    
+   <div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>DeSantis hires Ohio Uber driver to rig COVID stats | Fred Grimm</h3>
+     <p class="price">Source: Sun Sentinel, Published on November 13, 2020</p>
+     <a href="https://www.sun-sentinel.com/opinion/commentary/fl-op-com-grimm-ohio-sports-blogger-florida-covid-20201113-wikb2iv3gbd2vcby4hcevwyd6i-story.html" class="btn">Link to Article</a> 
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
    <div class="article-container">
     <div class="news-box news-box-a">
      <h3>World's top intensive care body advises against remdesivir for sickest COVID patients</h3>
@@ -6889,6 +6899,16 @@
    </div> 
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>Analysis of Excess Deaths During the COVID-19 Pandemic in the State of Florida</h3>
+     <p class="price">Source: American Journal of Public Health, Published on March 10, 2021</p>
+     <a href="https://ajph.aphapublications.org/doi/10.2105/AJPH.2020.306130" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>Detection of SARS-CoV-2 in Different Types of Clinical Specimens</h3>
      <p class="price">Source: Jama Network, Published on March 11, 2021</p>
      <a href="https://jamanetwork.com/journals/jama/fullarticle/2762997" class="btn">Link to Study Article</a>
@@ -7645,6 +7665,16 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>      
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Ultrasound has potential to damage coronaviruses, study finds</h3>
+     <p class="price">Source: MIT News, Published on March 16, 2021</p>
+     <a href="https://news.mit.edu/2021/ultrasound-coronaviruses-damage-0316" class="btn">Link to Article</a> 
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>        
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>62.1% of Japanese willing to have COVID-19 vaccination, survey says</h3>
