--- a/index.html
+++ b/index.html
@@ -3687,6 +3687,16 @@
    </div>     
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>Ivermectin reduces in vivo coronavirus infection in a mouse experimental model</h3>
+     <p class="price">Source: Nature, Published on March 30, 2020</p>
+     <a href="https://doi.org/10.1038/s41598-021-86679-0" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>        
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>COVID-19 third leading cause of U.S. deaths in 2020 after heart disease, cancer: U.S. report</h3>
      <p class="price">Source: Reuters, Published on March 31, 2020</p>
      <a href="https://www.reuters.com/article/us-health-coronavirus-usa-mortality-idUSKBN2BN2KD" class="btn">Link to Article</a>
@@ -3731,6 +3741,7 @@
      <h3>Pfizer says Covid vaccine 100 percent effective in children ages 12 to 15</h3>
      <p class="price">Source: NBC News, Published on March 31, 2020</p>
      <a href="https://www.nbcnews.com/health/health-news/pfizer-says-its-covid-vaccine-100-percent-effective-young-teens-n1262550" class="btn">Link to Article</a>
+     <a href="https://www.pfizer.com/news/press-release/press-release-detail/pfizer-biontech-announce-positive-topline-results-pivotal" class="btn">Link to Pfizer Article</a> 
     </div>
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
