--- a/covidnews.html
+++ b/covidnews.html
@@ -8239,7 +8239,7 @@
                                             
 <!-- Footer -->
  <footer class="footer">
-  <p>ENDesign &copy; 2020</p>
+  <p>Eric Nguyen Project &copy; 2020</p>
   <!-- <img src="img/hamburguesa.svg" class="hamburger" alt="news-menuicon"/> -->
 </footer>
 
