--- a/index.html
+++ b/index.html
@@ -3704,7 +3704,27 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
+   </div>      
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Low HDL and high triglycerides predict COVID-19</h3>
+     <p class="price">Source: Nature, Published on March 30, 2020</p>
+     <a href="https://doi.org/10.1038/s41598-021-86747-5" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
    </div>       
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Johnson & Johnson Statement on U.S. COVID-19 Vaccine Manufacturing</h3>
+     <p class="price">Source: Johnson & Johnson, Published on March 31, 2020</p>
+     <a href="https://www.jnj.com/johnson-johnson-statement-on-u-s-covid-19-vaccine-manufacturing" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>COVID-19 third leading cause of U.S. deaths in 2020 after heart disease, cancer: U.S. report</h3>
@@ -3817,6 +3837,16 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Pfizer and BioNTech Confirm High Efficacy and No Serious Safety Concerns Through Up to Six Months Following Second Dose in Updated Topline Analysis of Landmark COVID-19 Vaccine Study</h3>
+     <p class="price">Source: Pfizer, Published on April 1, 2020</p>
+     <a href="https://investors.pfizer.com/investor-news/press-release-details/2021/Pfizer-and-BioNTech-Confirm-High-Efficacy-and-No-Serious-Safety-Concerns-Through-Up-to-Six-Months-Following-Second-Dose-in-Updated-Topline-Analysis-of-Landmark-COVID-19-Vaccine-Study/default.aspx" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>      
 <div>
   <a href="javascript:void(0)" class="news-btn covidnews"><i class="fas fa-plus fa-fw" aria-hidden="true"></i>Past Coronavirus News</a>  
 </div>
