--- a/index.html
+++ b/index.html
@@ -3714,7 +3714,57 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
+   </div>      
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>CD8+ T cell responses in COVID-19 convalescent individuals target conserved epitopes from multiple prominent SARS-CoV-2 circulating variants</h3>
+     <p class="price">Source: Oxford Academics, Published on March 30, 2020</p>
+     <a href="https://doi.org/10.1093/ofid/ofab143" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
    </div>       
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>NIH clinical trial evaluating Moderna COVID-19 variant vaccine begins</h3>
+     <p class="price">Source: National Institute of Health (NIH), Published on March 31, 2020</p>
+     <a href="https://www.nih.gov/news-events/news-releases/nih-clinical-trial-evaluating-moderna-covid-19-variant-vaccine-begins" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Prioritising COVID-19 vaccination in changing social and epidemiological landscapes: a mathematical modelling study</h3>
+     <p class="price">Source: Lancet, Published on March 31, 2020</p>
+     <a href="https://doi.org/10.1016/S1473-3099(21)00057-8" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>   
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Risk Factors Associated With SARS-CoV-2 Infections, Hospitalization, and Mortality Among US Nursing Home Residents</h3>
+     <p class="price">Source: Jama Network, Published on March 31, 2020</p>
+     <a href="https://jamanetwork.com/journals/jamanetworkopen/fullarticle/2777972" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Effects of the COVID-19 pandemic on maternal and perinatal outcomes: a systematic review and meta-analysis</h3>
+     <p class="price">Source: Lancet, Published on March 31, 2020</p>
+     <a href="https://doi.org/10.1016/S2214-109X(21)00079-6" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Johnson & Johnson Statement on U.S. COVID-19 Vaccine Manufacturing</h3>
@@ -3730,6 +3780,7 @@
      <h3>COVID-19 third leading cause of U.S. deaths in 2020 after heart disease, cancer: U.S. report</h3>
      <p class="price">Source: Reuters, Published on March 31, 2020</p>
      <a href="https://www.reuters.com/article/us-health-coronavirus-usa-mortality-idUSKBN2BN2KD" class="btn">Link to Article</a>
+     <a href="https://www.cdc.gov/mmwr/volumes/70/wr/mm7014e1.htm" class="btn">Link to CDC Article</a> 
     </div>
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
