--- a/covidnews.html
+++ b/covidnews.html
@@ -8168,6 +8168,16 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
+   </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Exposure to SARS-CoV-2 generates T-cell memory in the absence of a detectable viral infection</h3>
+     <p class="price">Source: Nature, Published on March 19, 2021</p>
+     <a href="https://doi.org/10.1038/s41467-021-22036-z" class="btn">Link to Research Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
    </div>      
 <div class="article-container">
     <div class="news-box news-box-a">
