--- a/index.html
+++ b/index.html
@@ -3737,6 +3737,16 @@
    </div>       
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>Long COVID and Health Inequities: The Role of Primary Care</h3>
+     <p class="price">Source: Wiley Online Library Milbank Quarterly, Published on March 30, 2020</p>
+     <a href="https://doi.org/10.1111/1468-0009.12505" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>          
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>NIH clinical trial evaluating Moderna COVID-19 variant vaccine begins</h3>
      <p class="price">Source: National Institute of Health (NIH), Published on March 31, 2020</p>
      <a href="https://www.nih.gov/news-events/news-releases/nih-clinical-trial-evaluating-moderna-covid-19-variant-vaccine-begins" class="btn">Link to Article</a>
@@ -3880,6 +3890,46 @@
    </div>        
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>Single-Dose COVID-19 Nasal Vaccine Limits Infection in Monkeys</h3>
+     <p class="price">Source: National Institute of Allergy and Infectious Diseases (NIH), Published on April 1, 2020</p>
+     <a href="https://www.niaid.nih.gov/news-events/covid-19-nasal-vaccine" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Association between pre-existing respiratory disease and its treatment, and severe COVID-19: a population cohort study</h3>
+     <p class="price">Source: Lancet, Published on April 1, 2020</p>
+     <a href="https://doi.org/10.1016/S2213-2600(21)00095-3" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>      
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Computational epitope map of SARS-CoV-2 spike protein</h3>
+     <p class="price">Source: PNAS, Published on April 1, 2020</p>
+     <a href="https://doi.org/10.1371/journal.pcbi.1008790" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>   
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Systems serology detects functionally distinct coronavirus antibody features in children and elderly</h3>
+     <p class="price">Source: Nature, Published on April 1, 2020</p>
+     <a href="https://doi.org/10.1038/s41467-021-22236-7" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>       
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>U.S. COVID-19 vaccine rollout analysis hampered by technology, state data reporting</h3>
      <p class="price">Source: Reuters, Published on April 1, 2020</p>
      <a href="https://www.reuters.com/article/us-health-coronavirus-vaccines-data/u-s-covid-19-vaccine-rollout-analysis-hampered-by-technology-state-data-reporting-idUSKBN2BO5UR" class="btn">Link to Article</a>
@@ -3923,6 +3973,7 @@
      <h3>Moderna gets nod to speed up virus vaccine output with bigger vials</h3>
      <p class="price">Source: Reuters, Published on April 1, 2020</p>
      <a href="https://www.reuters.com/article/idUSKBN2BP06O" class="btn">Link to Article</a>
+     <a href="https://investors.modernatx.com/news-releases/news-release-details/moderna-provides-storage-update-announces-us-fda-authorizes-15" class="btn">Link to ModernaArticle</a> 
     </div>
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
