--- a/covidnews.html
+++ b/covidnews.html
@@ -4391,6 +4391,17 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
+   </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Exhaled aerosol increases with COVID-19 infection, age, and obesity</h3>
+     <p class="price">Source: Proceedings of the National Academy of Sciences (PNAS), Published on February 23, 2021</p>
+     <a href="https://doi.org/10.1073/pnas.2021830118" class="btn">Link to Study Article</a>
+     <a href="https://www.niddk.nih.gov/health-information/weight-management/adult-overweight-obesity/factors-affecting-weight-health" class="btn">Link to Additional Information</a> 
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
    </div>      
 <div class="article-container">
     <div class="news-box news-box-a">
