--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
    <h1>COVID-19 Tracker</h1>
    <p>Welcome</p>
    <a href="https://www.cdc.gov/coronavirus/2019-ncov/index.html" class="btn">See More about COVID-19</a>
+   <a href="https://www.cdc.gov/vaccines/covid-19/index.html" class="btn">See More about COVID-19 Vaccination</a> 
   </header>
   <div class="top-box top-box-a">
    <h3>Latest Total USA Cases</h4>
@@ -523,6 +524,9 @@
 </div> -->
 <div class="price">John Hopkins University Charts
  <div class="us-johnhopkins-chart">
+   <div class="us-johnhopkins-casestatechart"></div>
+   <div class="us-johnhopkins-deathstatechart"></div>
+   <div class="us-johnhopkins-totaluschart"></div>
     <div>  
     <form>
     <fieldset>
@@ -537,7 +541,7 @@
     </fieldset>
     </form>
     </div>
- </div>
+ </div> 
 </div>
   </div>  
   <div class="info-table-title">
