--- a/covidnews.html
+++ b/covidnews.html
@@ -74,12 +74,12 @@
 <!-- Box Section -->
  <section class="boxes">
   <div class="box">
-   <i class="fas fa-plus fa-4x"></i>
+   <i class="fas fa-hand-holding-medical fa-4x"></i>
    <h3>Global Cases</h3>
    <p class="us-testing">Loading</p>
   </div> 
   <div class="box">
-   <i class="fas fa-plus fa-4x"></i>
+   <i class="fas fa-skull-crossbones fa-4x"></i>
    <h3>Global Deaths</h3>
    <p class="us-testing-two">Loading</p>
   </div> 
