--- a/covidnews.html
+++ b/covidnews.html
@@ -7609,7 +7609,17 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>        
+   </div>   
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>A majority of uninfected adults show pre-existing antibody reactivity against SARS-CoV-2</h3>
+     <p class="price">Source: Journal of Clinical Investigation Insight, Published on March 15, 2021</p>
+     <a href="https://doi.org/10.1172/jci.insight.146316" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>      
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Employers with large on-site workforce can set up COVID-19 vaccine clinics: U.S. CDC</h3>
