--- a/index.html
+++ b/index.html
@@ -2116,6 +2116,26 @@
   </div> -->
   </div>   
  </section>
+
+<!-- Vaccine Box Section -->
+ <section class="boxes">
+  <div class="box">
+   <i class="fas fa-route fa-4x"></i>
+   <h3>Distributed</h3>
+   <p>Updated Weekly</p>
+  </div>
+  <div class="box">
+   <i class="fas fa-syringe fa-4x"></i>
+   <h3>Administerd</h3>
+   <p>Updated Weekly</p>
+  </div>
+ </section>
+
+<section>
+  <div class="info-title">
+    <p>COVID-19 Vaccine Progress</p>
+  </div> 
+</section> 
     
 <section>
   <div class="info-title">
