--- a/covidnews.html
+++ b/covidnews.html
@@ -34,7 +34,7 @@
        <li><a href="#" title="Supported Broswers: Chrome" class="support-btn"><i class="fa fa-chrome fa-fw" aria-hidden="true"></i></a></li>
        <li><a href="#" title="Supported Broswers: FireFox" class="support-btn"><i class="fa fa-firefox fa-fw" aria-hidden="true"></i></a></li>
        <li><a href="#" title="Supported Broswers: Edge" class="support-btn"><i class="fa fa-edge fa-fw aria-hidden="true"></i></a></li>
-       <!-- <li><a href="#" title="Supported Broswers: Safari" class="support-btn"><i class="fa fa-safari fa-fw aria-hidden="true"></i></a></li> -->
+       <li><a href="#" title="Supported Broswers: Safari" class="support-btn"><i class="fa fa-safari fa-fw aria-hidden="true"></i></a></li>
       </ul>  
     </div>
   </div>
