--- a/index.html
+++ b/index.html
@@ -4418,6 +4418,16 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
+   </div> 
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Natural mucosal barriers and COVID-19 in children</h3>
+     <p class="price">Source: Journal of Clinical Investigation (JCI), Published on April 6, 2021</p>
+     <a href="https://doi.org/10.1172/jci.insight.148694" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
    </div>      
 <div class="article-container">
     <div class="news-box news-box-a">
@@ -4469,6 +4479,27 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>      
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Symptoms and Functional Impairment Assessed 8 Months After Mild COVID-19 Among Health Care Workers</h3>
+     <p class="price">Source: Jama Network, Published on April 7, 2021</p>
+     <a href="https://jamanetwork.com/journals/jama/article-abstract/2778528" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>MHRA issues new advice, concluding a possible link between COVID-19 Vaccine AstraZeneca and extremely rare, unlikely to occur blood clots</h3>
+     <p class="price">Source: Gov Uk, Published on April 7, 2021</p>
+     <a href="https://www.gov.uk/government/news/mhra-issues-new-advice-concluding-a-possible-link-between-covid-19-vaccine-astrazeneca-and-extremely-rare-unlikely-to-occur-blood-clots" class="btn">Link to Article</a>
+     <a href="https://www.gov.uk/government/publications/use-of-the-astrazeneca-covid-19-vaccine-jcvi-statement/jcvi-statement-on-use-of-the-astrazeneca-covid-19-vaccine-7-april-2021" class="btn">Link to Additional Article</a> 
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
 <div>
   <a href="javascript:void(0)" class="news-btn covidnews"><i class="fas fa-plus fa-fw" aria-hidden="true"></i>Past Coronavirus News</a>  
 </div>
