--- a/covidnews.html
+++ b/covidnews.html
@@ -122,6 +122,16 @@
    </ul>
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>High expression of ACE2 receptor of 2019-nCoV on the epithelial cells of oral mucosa</h3>
+     <p class="price">Source: Nature, Published on February 24, 2020</p>
+     <a href="https://doi.org/10.1038/s41368-020-0074-x" class="btn">Link to Study Article</a> 
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>An analysis of SARS-CoV-2 viral load by patient age </h3>
      <p class="price">Source: John Hopkins, Published on April 30, 2020</p>
      <a href="https://ncrc.jhsph.edu/research/an-analysis-of-sars-cov-2-viral-load-by-patient-age/" class="btn">Link to Article</a>
@@ -175,7 +185,17 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>       
+   </div>      
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Visceral fat shows the strongest association with the need of intensive care in patients with COVID-19</h3>
+     <p class="price">Source: Metabolism Clinical and Experimental, Published on July 23, 2020</p>
+     <a href="https://doi.org/10.1016/j.metabol.2020.154319" class="btn">Link to Study Artile</a> 
+    </div>      
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>      
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Face Masks and GDP</h3>
