--- a/index.html
+++ b/index.html
@@ -2121,12 +2121,16 @@
  <section class="boxes">
   <div class="box">
    <i class="fas fa-route fa-4x"></i>
+   <h2 class="distribute-num"></h2>
    <h3>Distributed</h3>
+   <a href="https://covid.cdc.gov/covid-data-tracker/#vaccinations" class="btn">See More about COVID-19 Vaccination</a> 
    <p>Updated Weekly</p>
   </div>
   <div class="box">
    <i class="fas fa-syringe fa-4x"></i>
+   <h2 class="distribute-num"></h2> 
    <h3>Administerd</h3>
+   <a href="https://covid.cdc.gov/covid-data-tracker/#vaccinations" class="btn">See More about COVID-19 Vaccination</a> 
    <p>Updated Weekly</p>
   </div>
  </section>
@@ -2136,6 +2140,10 @@
     <p>COVID-19 Vaccine Progress</p>
   </div> 
 </section> 
+
+<section>
+  
+</section>  
     
 <section>
   <div class="info-title">
