--- a/index.html
+++ b/index.html
@@ -2121,17 +2121,17 @@
  <section class="boxes">
   <div class="box">
    <i class="fas fa-route fa-4x"></i>
-   <h2 class="distribute-num"></h2>
+   <h2 class="distribute-num">Loading</h2>
    <h3>Distributed</h3>
-   <a href="https://covid.cdc.gov/covid-data-tracker/#vaccinations" class="btn">See More about COVID-19 Vaccination</a> 
+   <a href="https://covid.cdc.gov/covid-data-tracker/#vaccinations" class="btn">See More about <br> COVID-19 Vaccination</a> 
    <p>Updated Weekly</p>
   </div>
   <div class="box">
    <i class="fas fa-syringe fa-4x"></i>
-   <h2 class="distribute-num"></h2> 
+   <h2 class="distribute-num">Loading...</h2> 
    <h3>Administerd</h3>
-   <a href="https://covid.cdc.gov/covid-data-tracker/#vaccinations" class="btn">See More about COVID-19 Vaccination</a> 
-   <p>Updated Weekly</p>
+   <a href="https://covid.cdc.gov/covid-data-tracker/#vaccinations" class="btn">See More about <br> COVID-19 Vaccination</a> 
+   <p>Updated Weekly by CDC</p>
   </div>
  </section>
 
@@ -4670,6 +4670,7 @@
 <script defer src="js/swiperaction.js"></script>
 <script async src="js/dataviz.js"></script>
 <script async src="js/datacollection.js"></script>
+<script async src="js/cdcdatacollection.js"></script>
 <script defer src="js/main.js"></script>
 <script src="js/anime.min.js"></script>
 <script src="js/d3.v6.min.js"></script> 
