--- a/index.html
+++ b/index.html
@@ -2142,7 +2142,7 @@
 </section> 
 
 <section>
-  
+  <div></div>
 </section>  
     
 <section>
@@ -4583,6 +4583,7 @@
      <h3>Symptoms and Functional Impairment Assessed 8 Months After Mild COVID-19 Among Health Care Workers</h3>
      <p class="price">Source: Jama Network, Published on April 7, 2021</p>
      <a href="https://jamanetwork.com/journals/jama/article-abstract/2778528" class="btn">Link to Study Article</a>
+     <a href="img/article1.pdf" class="btn">View Study Article PDF</a> 
     </div>
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
