--- a/index.html
+++ b/index.html
@@ -2122,16 +2122,14 @@
   <div class="box">
    <i class="fas fa-route fa-4x"></i>
    <h2 class="distribute-num">Loading</h2>
-   <h3>Distributed</h3>
-   <a href="https://covid.cdc.gov/covid-data-tracker/#vaccinations" class="btn">See More about <br> COVID-19 Vaccination</a> 
-   <p>Updated Weekly</p>
+   <h3>Distributed: Updated Weekly by CDC</h3>
+   <a href="https://covid.cdc.gov/covid-data-tracker/#vaccinations" class="btn">See More about COVID-19 Vaccination</a> 
   </div>
   <div class="box">
    <i class="fas fa-syringe fa-4x"></i>
    <h2 class="distribute-num">Loading...</h2> 
-   <h3>Administerd</h3>
-   <a href="https://covid.cdc.gov/covid-data-tracker/#vaccinations" class="btn">See More about <br> COVID-19 Vaccination</a> 
-   <p>Updated Weekly by CDC</p>
+   <h3>Administerd: Updated Weekly by CDC</h3>
+   <a href="https://covid.cdc.gov/covid-data-tracker/#vaccinations" class="btn">See More about COVID-19 Vaccination</a> 
   </div>
  </section>
 
