--- a/covidnews.html
+++ b/covidnews.html
@@ -1686,6 +1686,16 @@
    </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>Safety and Efficacy of the BNT162b2 mRNA Covid-19 Vaccine</h3>
+     <p class="price">Source: New England Journal of Medicine (NEJM) on December 31, 2020</p>
+     <a href="https://www.nejm.org/doi/full/10.1056/NEJMoa2034577" class="btn">Link to Study Article</a> 
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>Antihistamines and azithromycin as a treatment for COVID-19 on primary health care – A retrospective observational study in elderly patients</h3>
      <p class="price">Source: Science Direct on January 1, 2021</p>
      <a href="https://doi.org/10.1016/j.pupt.2021.101989" class="btn">Link to Article</a> 
@@ -1767,7 +1777,7 @@
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>US billionaires 'have received $1.1tn windfall in Covid pandemic'</h3>
-     <p class="price">Source: Guardian, Published on January 26 , 2021</p>
+     <p class="price">Source: Guardian, Published on January 26, 2021</p>
      <a href="https://www.theguardian.com/business/2021/jan/26/us-billionaires-have-received-11tn-windfall-in-covid-pandemic" class="btn">Link to Article</a>
     </div>
     <div class="news-box news-box-b">
@@ -3299,6 +3309,16 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Safety and Efficacy of the BNT162b2 mRNA Covid-19 Vaccine</h3>
+     <p class="price">Source: New England Journal of Medicine(NEJM), Published on February 17, 2021</p>
+     <a href="https://www.nejm.org/doi/full/10.1056/NEJMc2036242" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>      
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Researchers urge delaying Pfizer vaccine's second dose as first highly effective</h3>
